# acs-slack-gateway

./: .gitignore  Dockerfile  README.md  acslastlog.form  acslastlog.form~  acsquery.json  acsstatus.json~  build-docker.sh  mqtt.py  pyproject.toml  service.py  service.py.new  service.py~  syncwatcher.py  test.py  test.py~  update.sh
