[project]
name = "acs-slack-gateway"
version = "0.2.0"
description = "Slack gateway for ACS"
authors = ["Torsten Martinsen <torsten@bullestock.net>"]
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.5.20",
    "flask>=3.1.3",
    "flask-cors>=6.0.3",
    "paho-mqtt>=2.1.0",
    "requests>=2.34.2",
]
